* fix mysql database daos * sort by date not by id (dates in future will be replaced by current date on feed fetching) * fullscreen on smartphone closes the navigation * touch on entry opens/closes only on mobile version the entry (on desktop version just a click on the entry title opens/closes the entry) * fullscreen on smartphone title formating optimized * click on feed name opens the source always in a new window * unread items count will be updated on mark as read * toolbar works now when shortcuts was used for open an entry

--- a/www/public/css/style.css
+++ b/www/public/css/style.css
@@ -792,7 +792,7 @@ body.publicmode.notloggedin .entry-unread {
 		width:100%;
 		margin:0;
 		border:0;
-		overflow-x:hidden;
+		overflow:hidden;
 		clear:both;
 		border-bottom:3px solid #3d6d69;
 	}
@@ -912,6 +912,7 @@ body.publicmode.notloggedin .entry-unread {
 	
 		#fullscreen-entry .entry-title {
 			padding-top:40px;
+			color:#333333;
 		}
 		
 		#fullscreen-entry .entry-content,
